; ModuleID = '/home/carl/AnghaBench/macvim/src/extr_regexp.c_skipchr_keepstart.c'
source_filename = "/home/carl/AnghaBench/macvim/src/extr_regexp.c_skipchr_keepstart.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@prev_at_start = common dso_local global i32 0, align 4
@prevchr = common dso_local global i32 0, align 4
@prevprevchr = common dso_local global i32 0, align 4
@at_start = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @skipchr_keepstart to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @skipchr_keepstart() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = load i32, i32* @prev_at_start, align 4
  store i32 %4, i32* %1, align 4
  %5 = load i32, i32* @prevchr, align 4
  store i32 %5, i32* %2, align 4
  %6 = load i32, i32* @prevprevchr, align 4
  store i32 %6, i32* %3, align 4
  %7 = call i32 (...) @skipchr()
  %8 = load i32, i32* %1, align 4
  store i32 %8, i32* @at_start, align 4
  %9 = load i32, i32* %2, align 4
  store i32 %9, i32* @prevchr, align 4
  %10 = load i32, i32* %3, align 4
  store i32 %10, i32* @prevprevchr, align 4
  ret void
}

declare dso_local i32 @skipchr(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
